elastic/09-elastic-stateful-master.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-master
  namespace: soaring-clouds
  labels:
    component: elasticsearch
    role: master
spec:
  selector:
    matchLabels:
      component: elasticsearch
      role: master
  serviceName: elasticsearch-master
  replicas: 2
  template:
    metadata:
      labels:
        component: elasticsearch
        role: master
    spec:
      containers:
      - name: es-master
        image: quay.io/pires/docker-elasticsearch-kubernetes:6.3.0
        resources:
          requests:
            cpu: 0.25
          limits:
            cpu: 1
        ports:
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: elastic-master
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: elastic-master
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: standard # manual for minikube, oci for OKE (Oracle Kubernetes Engine)
      # NOTE: You can increase the storage size
      resources:
        requests:
          storage: 1Gi
