elastic/10-elastic-stateful-data.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-data
  namespace: soaring-clouds
  labels:
    component: elasticsearch
    role: data
spec:
  selector:
    matchLabels:
      component: elasticsearch
      role: data
  serviceName: elasticsearch-data
  replicas: 2
  template:
    metadata:
      labels:
        component: elasticsearch
        role: data
    spec:
      containers:
      - name: es-data
        image: quay.io/pires/docker-elasticsearch-kubernetes:6.3.2
        resources:
          requests:
            cpu: 0.25
          limits:
            cpu: 1
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        # livenessProbe:
        #   tcpSocket:
        #     port: transport
        #   initialDelaySeconds: 20
        #   periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: http
          initialDelaySeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - name: elastic-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: elastic-data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: standard # manual for minikube, oci for OKE (Oracle Kubernetes Engine)
      # NOTE: You can increase the storage size
      resources:
        requests:
          storage: 2Gi
