elastic/02-elastic-service-master.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-master
  namespace: soaring-clouds
  labels:
    component: elasticsearch
    role: master
spec:
  ports:
  - port: 9300
    name: transport
  clusterIP: None
  selector:
    component: elasticsearch
    role: master
