elastic/03-elastic-service-data.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-data
  namespace: soaring-clouds
  labels:
    component: elasticsearch
    role: data
spec:
  ports:
  - port: 9200
    name: serving
  - port: 9300
    name: transport
  clusterIP: None
  selector:
    component: elasticsearch
    role: data
