elastic/04-elastic-service-elasticsearch.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: soaring-clouds
  labels:
    component: elasticsearch
    role: data
spec:
  selector:
    component: elasticsearch
    role: data
  ports:
  - name: http
    port: 9200
#type: LoadBalancer
