elastic/20-elastic-service.yml
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: soaring-clouds
  labels:
    service: elasticsearch
spec:
  clusterIP: None
  ports:
  - port: 9200
    name: serving
  - port: 9300
    name: node-to-node
  selector:
    service: elasticsearch
