elastic/30-elastic-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elastic-ingress
  namespace: soaring-clouds
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:  
  - http:
      paths:
      - path: /soaring/elastic
        backend:
          serviceName: elasticsearch
          servicePort: serving
